--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
-<title>Happy Diwali 2020 Script</title>
+<title>Happy Diwali</title>
     <meta name="google" value="notranslate">
     <meta property="og:type" content="Make your own wonderful wish for you loved one" />
     <meta property="og:title" content="Happy Diwali 2020 Script" />
