--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+
 <html>
-<head>
+<head><meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <script src="/kt90pa0k_editor.js" crossorigin="anonymous"></script>
+      <script src="/kt90pa0k_console.js" crossorigin="anonymous"></script>
+      <script src="/kt90pa0k_esprisma.js" crossorigin="anonymous"></script>
+      <link rel="stylesheet" href="/kt90pa0k_console.css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
 <title>Happy Diwali</title>
@@ -863,7 +868,7 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>        
-<script src="https://www.googletagmanager.com/gtag/js?id=UA--1"></script>
+<script src="https://www.googletagmanager.com/gtag/js?id=UA--1" crossorigin="anonymous"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
